# optierp-mig

./: .gitignore  ENGINE_GUIDE.md  Marketing and promotions - promotio.txt  PRICING_AND_CHILD_TABLES.md  README.md  docker-compose.override.yml  docker-compose.yml  erpnext_migration_prompt.md  metadata_engine_plan.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  gst_states.py  hsn_aliases.py  logging.py  naming.py  notifications.py  num2words.py  pdf.py  permissions.py  scheduler.py  security.py  websocket.py  workflow.py
backend/app/jobs/: __init__.py  assets.py  subscription.py
backend/app/models/: __init__.py  accounts.py  assets.py  base.py  buying.py  core.py  selling.py  stock.py  types.py
backend/app/registry/: __init__.py  base.py  descriptors.py
backend/app/schemas/: accounts.py  assets.py  auth.py  buying.py  common.py  compliance.py  core.py  printing.py  selling.py  stock.py
backend/app/services/: accounts_common.py  accounts_masters.py  asset.py  asset_reports.py  audit.py  bank_reconciliation_tool.py  blanket.py  budget.py  coa.py  company.py  coupon.py  cycle_links.py  delivery_note.py  dunning.py  email.py  financial_reports.py  gl.py  gst_settings.py  hsn_lookup.py  journal_entry.py  material_request.py  module_workspace.py  opening_invoice.py  pagination.py  (+36 more)
backend/migrations/: env.py
backend/print_formats/: purchase_invoice.html  sales_invoice.html
backend/scripts/: seed.py  seed_assets_demo.py  seed_demo.py
backend/tests/: conftest.py
(+352 files in other folders)
